// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBottomNav.js should be hidden with a false value 1`] = `

<div class="bottom-nav"
     style="height: 56px;"
>
  <button type="button"
          class="btn"
  >
    <div class="btn__content">
    </div>
  </button>
  <button type="button"
          class="btn"
  >
    <div class="btn__content">
    </div>
  </button>
</div>

`;

exports[`VBottomNav.js should be visible with a true value 1`] = `

<div class="bottom-nav bottom-nav--active"
     style="height: 56px;"
>
  <button type="button"
          class="btn"
  >
    <div class="btn__content">
    </div>
  </button>
  <button type="button"
          class="btn"
  >
    <div class="btn__content">
    </div>
  </button>
</div>

`;

exports[`VBottomNav.js should have a bottom-nav class 1`] = `

<div class="bottom-nav"
     style="height: 56px;"
>
  <button type="button"
          class="btn"
  >
    <div class="btn__content">
    </div>
  </button>
  <button type="button"
          class="btn"
  >
    <div class="btn__content">
    </div>
  </button>
</div>

`;

exports[`VBottomNav.js should have prop classes 1`] = `

<div class="bottom-nav bottom-nav--absolute bottom-nav--shift"
     style="height: 56px;"
>
  <button type="button"
          class="btn"
  >
    <div class="btn__content">
    </div>
  </button>
  <button type="button"
          class="btn"
  >
    <div class="btn__content">
    </div>
  </button>
</div>

`;
